# legalpdf_translate

./: .gitignore  AGENTS.md  APP_KNOWLEDGE.md  CLAUDE.md  Launch LegalPDF Browser App (Live).cmd  Launch LegalPDF Browser App (Preview).cmd  Launch LegalPDF Browser App (Shadow).cmd  Launch LegalPDF Translate.bat  README.md  agent.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-package.yml
bootstrap_harness_kit/: README.md
docs/assistant/: AGENT_ADDONS.md  API_PROMPTS.md  APP_KNOWLEDGE.md  BROWSER_BRIDGE.md  CODEX_PROMPT_FACTORY.md  DB_DRIFT_KNOWLEDGE.md  DOCS_REFRESH_NOTES.md  EXTERNAL_SOURCE_REGISTRY.md  GLOSSARY_BUILDER_KNOWLEDGE.md  GLOSSARY_CONTENT.md  GLOSSARY_REFERENCE.md  GMAIL_LIVE_TESTING.md  GOLDEN_PRINCIPLES.md  HANDOFF.md  HARNESS_OUTPUT_MAP.json  HARNESS_PROFILE.json  INDEX.md  ISSUE_MEMORY.json  ISSUE_MEMORY.md  LOCALIZATION_GLOSSARY.md  LOCAL_CAPABILITIES.md  LOCAL_ENV_PROFILE.local.md  PERFORMANCE_BASELINES.md  PR46_POST_MERGE_SUMMARY.md  PROJECT_INSTRUCTIONS.txt  PROMPTS_KNOWLEDGE.md  QT_UI_KNOWLEDGE.md  QT_UI_PLAYBOOK.md  SESSION_RESUME.md  UPDATE_POLICY.md  VALIDATION.md  WORKFLOW_GIT_AI.md  manifest.json
installer/: legalpdf_translate.iss
resources/: system_instructions_ar.txt  system_instructions_en.txt  system_instructions_enfr.txt  system_instructions_fr.txt
scripts/: build_qt.ps1  create_desktop_shortcut.ps1  create_review_bundle.ps1  install_local.ps1  make_app_icon.py  refresh_icon_cache.ps1  register_edge_native_host.ps1  scan_secrets.ps1  setup_python311_env.ps1  sync_loaded_gmail_extension.ps1  validate_dev.ps1
tests/: browser_esm_probe.py  conftest.py  test_analyze_only_mode.py  test_arabic_pre_tokenize.py  test_browser_arabic_review.py  test_browser_gmail_bridge.py  test_browser_safe_rendering.py  test_build_identity.py  test_calibration_audit.py  test_checkpoint_resume.py  test_cli_flags.py  test_codeblock_parser.py  test_column_visibility_persistence.py  test_cost_guardrails.py  test_db_migration_joblog_v2.py  test_docx_writer.py  test_docx_writer_rtl.py  test_effort_policy_guardrails.py  test_effort_settings.py  test_glossary.py  test_glossary_builder.py  test_glossary_builder_lemma_selection.py  test_glossary_builder_ordering.py  test_glossary_diagnostics.py  test_glossary_scope_merge.py  test_gmail_batch.py  test_gmail_browser_service.py  test_gmail_draft.py  test_gmail_focus.py  test_gmail_focus_host.py  test_gmail_intake.py  test_gmail_review_state.py  test_gmail_window_trace.py  test_google_photos_picker.py  test_gui_settings_dialog.py  test_gui_state_machine.py  test_honorarios_docx.py  test_icon_assets.py  test_image_policy.py  test_installer_native_host.py  (+79 more)
tooling/: automation_preflight.dart  build_usage_audit_packet.py  cloud_eval_preflight.dart  harness_profile_lib.py  launch_browser_app_live_detached.py  launch_qt_build.py  ocr_benchmark.py  ocr_preflight.py  ocr_translation_probe.py  preview_harness_sync.py  qt_render_review.py  render_docx.py  validate_agent_docs.dart  validate_workspace_hygiene.dart
(+394 files in other folders)
