[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legalpdf-translate"
version = "0.1.0"
description = "Windows desktop app for page-by-page legal PDF translation to DOCX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.1",
  "Pillow>=10.0.0",
  "keyring>=25.0.0",
  "PySide6>=6.7.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "Jinja2>=3.1.0",
  "python-multipart>=0.0.9",
]
authors = [{ name = "LegalPDF Translate" }]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pyinstaller>=6.0.0"]

[project.scripts]
legalpdf-translate = "legalpdf_translate.cli:main"
legalpdf-translate-qt = "legalpdf_translate.qt_main:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
packages = [
  "legalpdf_translate",
  "legalpdf_translate.qt_gui",
  "legalpdf_translate.shadow_web",
  "legalpdf_translate.workflow_components",
]

[tool.setuptools.package-data]
"legalpdf_translate.shadow_web" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
